# ChangeLog for sys-apps/openrc
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.80 2009/10/14 11:04:35 vapier Exp $

*openrc-0.6.1 (03 Jun 2010)

  03 Jun 2010; Daniel Robbins <drobbins@funtoo.org> openrc-0.6.1.ebuild:
  New OpenRC with newer iproute2-based Funtoo network config, masked for
  testing.

  04 Jan 2010; Daniel Robbins <drobbins@funtoo.org> openrc-0.6.0.ebuild:
  SCH-2009.1 - moving openrc-0.6.0 (Funtoo Core Networking) to stable for all
  arches.

*openrc-0.6.0 (21 Dec 2009)

  21 Dec 2009; Daniel Robbins <drobbins@funtoo.org> +openrc-0.6.0.ebuild:
  New upstream release merged in. NOT YET TESTED, thus the KEYWORDS=""

*openrc-0.5.2-r1 (27 Nov 2009)

  27 Nov 2009; Daniel Robbins <drobbins@funtoo.org> +openrc-0.5.2-r1.ebuild:
  New release with some funtoo fixes and all current upstream fixes.

*openrc-0.5.2 (18 Nov 2009)

  18 Nov 2009; Daniel Robbins <drobbins@funtoo.org> +openrc-0.5.2.ebuild:
  New network construction kit template support in /etc/netif.d. Pretty
  well-tested by drobbins, still needs user testing. Masked.

*openrc-0.5.1-r1 (17 Sep 2009)

  17 Sep 2009; Daniel Robbins <drobbins@funtoo.org> +openrc-0.5.1-r1.ebuild:
  New experimental release containing support for new new funtoo network
  scripts. Masked for now and will likely be replaced with a finalized
  -r2 unless I got everything right.

*openrc-0.5.0-r2 (01 Aug 2009)

  01 Aug 2009; Daniel Robbins <drobbins@funtoo.org> +openrc-0.5.0-r2.ebuild:
  UNICODE enabling fix, bump to new Funtoo OpenRC snapshot that removes
  references to /etc/conf.d/network and /etc/init.d/network.

*openrc-0.5.0-r1 (31 Jul 2009)

  31 Jul 2009; Daniel Robbins <drobbins@funtoo.org> +openrc-0.5.0-r1.ebuild:
  New upstream snapshot of openrc.

*openrc-0.5.0 (14 Jul 2009)

  14 Jul 2009; Daniel Robbins <drobbins@funtoo.org> +openrc-0.5.0.ebuild: New