@@ -1,6 +1,7 @@
 AUX inittab-openrc.patch 760 RMD160 0516f377865e0c4e8f36ee3ea9dac453ebadf592 SHA1 d79cf3d94298667f113d102391205449283b558e SHA256 a8c38e18ff9d40a166e2b697c2746275572e1d55835f218c7495b6ca34e18a21
 AUX openrc.logrotate 71 RMD160 4e7370ca873bd917f16e2b8cfc4bc71accbf2353 SHA1 ef1f26020db432f96a1485f72a189b288ef6873b SHA256 0b44210db9770588bd491cd6c0ac9412d99124c6be4c9d3f7d31ec8746072f5c
 DIST corenetwork-1.0.1.tar.bz2 3519 RMD160 bf746c01d16e04e755843aa308d3c43665a29c8f SHA1 5316d7b286eeaeb0cb2d06e4fecb06911113afa8 SHA256 b241436908158e1dae44fb40db1ec1afeca21ffbbf6a466eeb1d98ac5c63caac
+DIST corenetwork-1.0.2.tar.bz2 3522 RMD160 24b27370c096a0ecd0822360b4e9df3e7a2215e6 SHA1 bcdca9e6323f8d142123601eff7741fe46ca4a11 SHA256 1a965ae4bfaa60cd5481f46933443e4f8a87dcac779f1a317226dde989531f03
 DIST openrc-0.6.1.tar.bz2 154897 RMD160 d3ee62bdc57b38f2ecfdb2e55d75b5279a4253b7 SHA1 07c27e443b7adfcab02eb3e267f4d228bb580dfc SHA256 c7847254e41b613b76ae570cf786ce8164d637962ad4580d0825b4b62b475e07
 DIST openrc-funtoo-2009.08.01.tar.bz2 147667 RMD160 a6da0be81889be2b0aa5d55e16ed4f72c59ae6e5 SHA1 f22970eb2a8075ccb36cef3a6ec1291d84df04da SHA256 3a27ae1bf03c692da4a5b71d186d3478b41201cce7c7a56aeb65f98eb9c7a908
 DIST openrc-funtoo-2009.11.18.tar.bz2 149199 RMD160 73f8b653a3459d23944ed316cfe7e8f6a6023a0b SHA1 eb4da4f4061cbc1b6b31a72aa2d3ef146587c854 SHA256 825037dc5fba6e67c247934d4d928e2b3e8a5557fa7eeaa9083cf290281fba8e
@@ -9,6 +10,7 @@ EBUILD openrc-0.5.0-r2.ebuild 9015 RMD160 80d0606d833e17662afcda2937812805fd18a3
 EBUILD openrc-0.5.2-r1.ebuild 4387 RMD160 f78bd3e9f7fffded3b5c68259f746d65915a0b97 SHA1 1503919ef6f9d74c052607664a23d250ce23700c SHA256 fbbf5a13a827b6ebfb8793167acc9fcb68ca1bd268f0b22ff86f1fb69b939f45
 EBUILD openrc-0.5.2.ebuild 4715 RMD160 e4827f2754f8288834344a64cc1ccdca6a43d484 SHA1 0380be444accd2dbff4a39dc3a7b6426e9577a84 SHA256 92a325911b0fe1228f9008fe428079b90b681899799d09910426c3027c05803a
 EBUILD openrc-0.6.0.ebuild 4372 RMD160 0d654ecae63f670ee51d8c33ed0001402fd6d342 SHA1 3ecc16bb8da685befba18a0cf6e551cef460ee38 SHA256 3e9b69b33d818984acc9b079303655dd775cbd9c5c9c079acddffcacb2bd237a
+EBUILD openrc-0.6.1-r1.ebuild 5034 RMD160 d80ffdb187236697ab2c375add995fe3aa1f9f8d SHA1 e9c3067d5ef80fd934bf748a9bc318393304dee2 SHA256 d16f370eb8bb6b5268280f51f6ae24d0542bf4842bb98cc6d0b55590ba087342
 EBUILD openrc-0.6.1.ebuild 5009 RMD160 090a4eb1f792669bfc2bb595ce033d02d29497cb SHA1 05124792f5e5d2c124efc9d0844d073c405da67f SHA256 7f63f060e18143bd2373efc6a71535e54d3aa14448c28cd091dbbeae59ae08f7
-MISC ChangeLog 13196 RMD160 9bb212545abefadd8331e2c872a11a23149129b2 SHA1 0e3f4d2a0eca927ffd57d98894f192d5e366aaed SHA256 4ba10318a663db3919fab5c5f8bb8e2f75f420fb59734ff8308f4f6d469c3ca7
+MISC ChangeLog 13405 RMD160 140a1d73d13b9d66b3ac667336bb9f0db89de426 SHA1 4d7885aafb0767064e843548b4b3349aa8a53fa0 SHA256 d8d521f64654327e67dc7e38508a062238f9b4c16d1ae7ac8d8666d21847dc82
 MISC metadata.xml 309 RMD160 af05ed6a2bd3ec66097c304597484905b765661e SHA1 af7c0891711dbc24b07b7546a0b8f79f2637cdf6 SHA256 9f9b210bf70b7eb3d4958976711f8ae33860c310b4c04b8dbcdd3784de54773b
